# ChangeLog for net-ftp/ftpd
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-ftp/ftpd/Attic/ChangeLog,v 1.11 2003/08/13 15:34:13 agriffis Exp $

  13 Aug 2003; Aron Griffis <agriffis@gentoo.org> ftpd-0.17-r1.ebuild:
  Mark stable on alpha for LiveCD

  08 Jun 2003; Seemant Kulleen <seemant@gentoo.org> ftpd-0.17-r1.ebuild:
  shadow fix patch is not ssl specific, moved out of ssl USE check. Thanks again
  to: Frank Straetz

*ftpd-0.17-r1 (07 Jun 2003)

  07 Jun 2003; Seemant Kulleen <seemant@gentoo.org> ftpd-0.17-r1.ebuild,
  files/ftpd-0.17-shadowfix.patch:
  fix for shadow passwords, to close bug #12353 opened by Adam Bolte
  <adam@vivid.net.au>. Fix provided by Frank Straetz <Frank@KTHXBYE.de>

*ftpd-0.17 (25 Nov 2002)

  29 Apr 2003; Jason Wever <weeve@gentoo.org> ftpd-0.17.ebuild:
  Added ~sparc to keywords.

  19 Apr 2003; Martin Holzer <mholzer@gentoo.org> ftpd-0.17.ebuild:
  Changed to virtual/inetd depend.

  09 Feb 2003; Seemant Kulleen <seemant@gentoo.org> ftpd-0.17.ebuild :

  Sed expression delimiter from / to :, closing bug #15006 by Blu3
  <david+gentoo.org@blue-labs.org>

  15 Jan 2003; Nick Hadaway <raker@gentoo.org> ftpd-0.17.ebuild :
  Fixed a typo in postinst and added xinetd as an RDEPEND and now
  installing an /etc/xinetd.d/ftp.  Also changed to epatch.

  05 Dec 2002; Nick Hadaway <raker@gentoo.org> ftpd-0.17.ebuild :
  Marked stable.

  25 Nov 2002; Nick Hadaway <raker@gentoo.org> ftpd-0.17.ebuild,
  files/digest-ftpd-0.17.ebuild, files/ssl.diff.gz :
  New ebuild.  Your basic netkit linux-ftpd patched for ssl support.