@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/ftpd/Attic/ftpd-0.17-r1.ebuild,v 1.5 2003/09/07 00:12:23 msterret Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/ftpd/Attic/ftpd-0.17-r1.ebuild,v 1.6 2004/06/09 21:41:10 agriffis Exp $
 
 inherit eutils
 
@@ -23,7 +23,7 @@ RDEPEND="${DEPEND}
 src_unpack() {
 	unpack ${A}
 	cd ${S}
-	if [ "`use ssl`" ]; then
+	if use ssl; then
 		epatch ${FILESDIR}/ssl.diff.gz
 	fi
 	epatch ${FILESDIR}/${P}-shadowfix.patch
