@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/gftp/Attic/gftp-2.0.15.ebuild,v 1.7 2004/04/27 21:49:49 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/gftp/Attic/gftp-2.0.15.ebuild,v 1.8 2004/06/09 21:43:23 agriffis Exp $
 
 inherit eutils
 
@@ -42,7 +42,7 @@ src_compile() {
 
 	# do not use enable-{gtk20,gtkport} they are not recognized
 	# and will disable building the gtkport alltogether
-	if [ -n "`use gtk`" ]
+	if use gtk
 	then
 		einfo "gtk+ enabled"
 		use gtk2 \
