@@ -1,6 +1,10 @@
 # ChangeLog for net-ftp/gftp
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/gftp/ChangeLog,v 1.29 2004/04/27 21:49:49 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/gftp/ChangeLog,v 1.30 2004/06/09 21:43:23 agriffis Exp $
+
+  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> gftp-2.0.14.ebuild,
+  gftp-2.0.15.ebuild, gftp-2.0.16-r1.ebuild, gftp-2.0.17.ebuild:
+  Fix use invocation
 
   27 Apr 2004; Aron Griffis <agriffis@gentoo.org> gftp-2.0.15.ebuild,
   gftp-2.0.16-r1.ebuild:
