@@ -1,6 +1,10 @@
 # ChangeLog for net-ftp/ftpd
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/ftpd/Attic/ChangeLog,v 1.11 2003/08/13 15:34:13 agriffis Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/ftpd/Attic/ChangeLog,v 1.12 2004/06/09 21:41:10 agriffis Exp $
+
+  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> ftpd-0.17-r1.ebuild,
+  ftpd-0.17.ebuild:
+  Fix use invocation
 
   13 Aug 2003; Aron Griffis <agriffis@gentoo.org> ftpd-0.17-r1.ebuild:
   Mark stable on alpha for LiveCD
